fixing header spacing

--- a/style/custom.css
+++ b/style/custom.css
@@ -222,12 +222,13 @@ body #course_page_title {
     padding-left: 40px;
     height: 140px;
 }
-body #course_page_title_no_back {
+body .no_back #course_page_title {
     position: relative;
     background-color: #fff;
     border-left: 8px #fc852c solid;
     font-size: 28px;
     padding-left: 40px;
+    height: unset;
 }
 body .back_course_main {
     position: relative;
@@ -236,9 +237,9 @@ body .back_course_main {
     padding-left: 6px;
     padding-top: 18px;
 }
-#course_page_title_no_back .page_title {
-    padding-bottom: 26px;
-    padding-top: 26px;
+.no_back #course_page_title .page_title {
+    padding-bottom: 28px;
+    padding-top: 28px;
 }
 .page_title {
     padding-bottom: 20px;
@@ -246,17 +247,6 @@ body .back_course_main {
 }
 .page_title a:active, .page_title a:hover {
     text-decoration:none;
-}
-/** Teacher Edit Link START */
-div.teachereditlink {
-    position: relative;
-    display: none;
-    float: right;
-    z-index: 1;
-    margin-top: 13px;
-    margin-right: 13px;
-    font-size: 14px;
-    width: unset;
 }
 @media (max-width:900px) and (min-width:660px){
     body #course_page_title {
@@ -273,6 +263,18 @@ div.teachereditlink {
         font-size: 15px;
     }
 }
+/** Teacher Edit Link START */
+div.teachereditlink {
+    position: relative;
+    display: none;
+    float: right;
+    z-index: 1;
+    margin-top: 13px;
+    margin-right: 13px;
+    font-size: 14px;
+    width: unset;
+}
+
 /** Teacher Edit Link END */
 /* header END */
 
